<resources>
    <string name="app_name">Sammy\'s Reward Program</string>
    <string name="title_home">Home</string>
    <string name="title_notifications">Notifications</string>
    <string name="alternateID">Enter Phone Number</string>
    <string name="homeButton">Back to Home</string>
    <string name="congrates">Congratulations!</string>
    <string name="jackpot">You have earned enough points to receive a discount. Please choose from one of the pots of gold to earn</string>
    <string name="winnings_amounts">$5, $10, or $15 Off!</string>
    <string name="settings">Settings</string>
    <string name="usePhone">Search Number</string>
    <string name="newMember">Add New Member</string>
    <string name="Admin">Admin</string>
    <string name="createMember">Become a Rewards Member</string>
    <string name="newMemberTitle">Sign Up For Rewards</string>
    <string name="hintFirstName">First Name</string>
    <string name="hintLastName">Last Name</string>
    <string name="hintPhoneNumber">Phone Number</string>
    <string name="mainActivityWelcome">Scan Your Card</string>
    <string name="title_activity_settings">Settings</string>
    <string name="scan_card">Scan Member Card</string>
    <string name="search">Search</string>
    <string name="memberAccount">Member Account</string>
    <string name="menu_refresh">Refresh</string>
    <string name="enterOrder">Enter New Order Amount</string>
    <string name="Add_Points_btn">Confirm Total</string>
    <string name="order_total_hint">Enter Order Amount</string>
    <string name="SearchLabel">Search for Member Account</string>
    <string name="updatePassword">Update Password</string>
    <string name="changeRewardGoals">Change Reward Criteria</string>
    <string name="adminMain">Admin Menu</string>
    <string name="oldPassword">Enter Old Password</string>
    <string name="newPassword">Enter New Password</string>
    <string name="confirmPassword">Confirm Password</string>
    <string name="enterOrderTitle">Enter Customer\'s Order Value</string>
    <string name="adminViewTitle">Reward Program Updates</string>
    <string name="updateWinningAmounts">Update Winning Amounts</string>
    <string name="updateWinningTarget">Update Winning Target</string>
    <string name="winningTarget">Winning Target</string>
    <string name="easy">Low Winning</string>
    <string name="medium">Medium Winning</string>
    <string name="hard">High Winning</string>
    <string name="update">Update Criteria</string>
    <string name="updatePass">Update Admin Password</string>
    <string name="updatePasswordView">Admin Password Change</string>
    <string name="memberAccountTitle">Member Account</string>
    <string name="play">SPIN!</string>
</resources>
