<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.yahia.rewards_program.AddNewMember">

    <FrameLayout
        android:id="@+id/content"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <EditText
                android:id="@+id/firstNameTxt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_above="@+id/lastNameTxt"
                android:layout_alignStart="@+id/lastNameTxt"
                android:layout_marginBottom="20dp"
                android:ems="10"
                android:hint="@string/hintFirstName"
                android:inputType="textPersonName"
                android:padding="15dp" />

            <EditText
                android:id="@+id/lastNameTxt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_above="@+id/newPhoneNumber"
                android:layout_alignStart="@+id/newPhoneNumber"
                android:layout_marginBottom="20dp"
                android:ems="10"
                android:hint="@string/hintLastName"
                android:inputType="textPersonName"
                android:padding="15dp" />

            <EditText
                android:id="@+id/newPhoneNumber"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:ems="10"
                android:hint="@string/hintPhoneNumber"
                android:inputType="phone"
                android:padding="15dp" />

            <Button
                android:id="@+id/createNewMember_btn"
                style="@style/Widget.AppCompat.Button"
                android:layout_width="wrap_content"
                android:layout_height="60dp"
                android:layout_below="@+id/newPhoneNumber"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="84dp"
                android:height="30dp"
                android:elevation="0dp"
                android:text="@string/createMember"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/newMemberTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="54dp"
                android:text="@string/newMemberTitle"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textSize="24sp"
                android:textStyle="bold" />
        </RelativeLayout>
    </FrameLayout>

    <android.support.design.widget.BottomNavigationView
        android:id="@+id/navigation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:background="?android:attr/windowBackground"
        app:menu="@menu/navigation" />

</LinearLayout>
