<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.yahia.rewards_program.EnterOrderAmount"
    android:background="@drawable/wallpaper1">

    <FrameLayout
        android:id="@+id/content"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <EditText
                android:id="@+id/orderAmount_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:ems="10"
                android:hint="@string/order_total_hint"
                android:inputType="numberDecimal"
                android:textSize="24sp"
                android:layout_marginTop="90dp"
                android:layout_alignTop="@+id/enterOrderAmountTitle"
                android:layout_alignStart="@+id/enterOrderAmountTitle" />

            <Button
                android:id="@+id/addPoints_btn"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@+id/orderAmount_txt"
                android:layout_marginStart="12dp"
                android:layout_toEndOf="@+id/orderAmount_txt"
                android:background="@color/colorPrimary"
                android:text="@string/Add_Points_btn"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/enterOrderAmountTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentTop="true"
                android:layout_marginBottom="30dp"
                android:layout_marginEnd="340dp"
                android:layout_marginTop="25dp"
                android:text="@string/enterOrderTitle"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="44sp"
                android:textStyle="bold" />

        </RelativeLayout>
    </FrameLayout>

    <android.support.design.widget.BottomNavigationView
        android:id="@+id/navigation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:background="@android:color/transparent"
        app:menu="@menu/navigation" />

</LinearLayout>