<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.yahia.rewards_program.MainActivity">

    <FrameLayout
        android:id="@+id/content"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/alternateID_btn"
                style="@android:style/Widget.Button.Toggle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="228dp"
                android:width="@android:dimen/thumbnail_width"
                android:height="70dp"
                android:text="@string/alternateID"
                android:textSize="18sp" />

            <Button
                android:id="@+id/newMember_btn"
                style="@android:style/Widget.Button.Toggle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignStart="@+id/alternateID_btn"
                android:layout_below="@+id/alternateID_btn"
                android:layout_marginTop="20dp"
                android:width="@android:dimen/thumbnail_width"
                android:height="70dp"
                android:text="@string/newMember"
                android:textSize="18sp" />

            <Button
                android:id="@+id/adminView_btn"
                style="@android:style/Widget.Button.Toggle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignStart="@+id/newMember_btn"
                android:layout_below="@+id/newMember_btn"
                android:layout_marginTop="20dp"
                android:width="@android:dimen/thumbnail_width"
                android:height="70dp"
                android:text="@string/Admin"
                android:textSize="18sp" />

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="36dp"
                app:srcCompat="@drawable/money"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true" />

        </RelativeLayout>
    </FrameLayout>

    <android.support.design.widget.BottomNavigationView
        android:id="@+id/navigation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:background="?android:attr/windowBackground"
        app:menu="@menu/navigation" />

</LinearLayout>
