<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.yahia.rewards_program.AdminMain"
    android:background="@drawable/wallpaper1">

    <FrameLayout
        android:id="@+id/content"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/updatePassword"
                style="@android:style/Widget.Button.Toggle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_above="@+id/updatePoints"
                android:layout_alignStart="@+id/updatePoints"
                android:layout_marginBottom="40dp"
                android:width="@android:dimen/thumbnail_width"
                android:height="90dp"
                android:background="@color/colorPrimary"
                android:onClick="goToChangePassword"
                android:text="@string/updatePassword"
                android:textColor="@android:color/background_light"
                android:textSize="24sp" />

            <Button
                android:id="@+id/updatePoints"
                style="@android:style/Widget.Button.Toggle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="201dp"
                android:width="@android:dimen/thumbnail_width"
                android:height="90dp"
                android:background="@color/colorPrimary"
                android:onClick="goToAdminView"
                android:text="@string/changeRewardGoals"
                android:textColor="@android:color/background_light"
                android:textSize="24sp"
                tools:layout_editor_absoluteX="506dp"
                tools:layout_editor_absoluteY="116dp" />

            <TextView
                android:id="@+id/adminMainTxtView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="70dp"
                android:text="@string/adminMain"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="44sp"
                android:textStyle="bold" />

        </RelativeLayout>
    </FrameLayout>
    <android.support.design.widget.BottomNavigationView
        android:id="@+id/navigation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:background="@android:color/transparent"
        app:itemIconTint="@color/selected_item_color"
        app:itemTextColor="@color/selected_item_color"
        app:menu="@menu/navigation" />
</LinearLayout>