<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.yahia.rewards_program.ChangePassword"
    android:background="@drawable/wallpaper1">

    <FrameLayout
        android:id="@+id/content"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <EditText
                android:id="@+id/newPass"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignStart="@+id/oldPass"
                android:layout_below="@+id/oldPass"
                android:layout_marginTop="51dp"
                android:width="250dp"
                android:ems="10"
                android:hint="@string/newPassword"
                android:inputType="numberPassword"
                android:maxLength="4"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/secNewPass"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignStart="@+id/newPass"
                android:layout_below="@+id/newPass"
                android:layout_marginTop="59dp"
                android:width="250dp"
                android:ems="10"
                android:hint="@string/confirmPassword"
                android:inputType="numberPassword"
                android:maxLength="4"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/oldPass"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="154dp"
                android:width="250dp"
                android:ems="10"
                android:hint="@string/oldPassword"
                android:inputType="numberPassword"
                android:maxLength="4"
                android:textSize="20sp" />

            <Button
                android:id="@+id/changePasswordBtn"
                style="@android:style/Widget.Button.Toggle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="73dp"
                android:width="@android:dimen/thumbnail_width"
                android:height="70dp"
                android:background="@color/colorPrimary"
                android:text="Update Password"
                android:textColor="@android:color/background_light"
                android:textSize="24sp" />

        </RelativeLayout>
    </FrameLayout>
    <android.support.design.widget.BottomNavigationView
        android:id="@+id/navigation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:background="@android:color/transparent"
        app:itemIconTint="@color/selected_item_color"
        app:itemTextColor="@color/selected_item_color"
        app:menu="@menu/navigation" />
</LinearLayout>